fix: modal/dialog shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,12 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+html body[data-scroll-locked]:not([data-scroll-no-lock]) {
+    min-width: 100%;
+    margin-right: 0 !important;
+    overflow: inherit !important;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 body {
